--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 
 <div class="ui grid">
   <!-- form 1 -->
@@ -10,27 +10,85 @@
       <div class="ui form">
         <div class="inline fields">
           <div class="two wide field "></div>
-          <div class="two wide field ">
-            <label class="ui right ">ชื่อกระดาษทำการ</label>
+          <div class="two wide field required">
+            <label class="text-right full-width">ชื่อกระดาษทำการ</label>
           </div>
           <div class="ten wide field ">
             <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
-              [(ngModel)]="riskHrdPaperName">
+              [(ngModel)]="riskAssRiskWsHdr.riskHrdPaperName">
           </div>
         </div>
         <div class="inline fields">
           <div class="two wide field "></div>
-          <div class="two wide field">
-            <label>ปีงบประมาณ</label>
+          <div class="two wide field required">
+            <label class="text-right full-width">ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
-            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled">
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="riskAssRiskWsHdr.budgetYear"
+              disabled="disabled">
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="two wide field "></div>
+          <div class="two wide field required">
+            <label class="text-right full-width">ผู้จัดทำ : ชื่อ </label>
           </div>
           <div class="two wide field ">
-            <label>ผู้ตรวจ</label>
+            <div class="ui input">
+              <select class="ui dropdown ai selection" style="width: 100%;" id="createUserTitle" [(ngModel)]="riskAssRiskWsHdr.createUserTitle">
+                <option value="00">เลือก</option>
+                <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+              </select>
+            </div>
           </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="ผู้ตรวจ" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
+          <div class="two wide field ">
+            <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName"
+              [(ngModel)]="riskAssRiskWsHdr.createUserName">
+          </div>
+          <div class="one wide field required">
+            <label class="text-right full-width">นามสกุล</label>
+          </div>
+          <div class="two wide field ">
+            <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName"
+              [(ngModel)]="riskAssRiskWsHdr.createLastName">
+          </div>
+          <div class="one wide field required">
+            <label class="text-right full-width">ตำแหน่ง</label>
+          </div>
+          <div class="two wide field ">
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition"
+              [(ngModel)]="riskAssRiskWsHdr.createPosition">
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="two wide field "></div>
+          <div class="two wide field required">
+            <label class="text-right full-width">ผู้ตรวจ : ชื่อ </label>
+          </div>
+          <div class="two wide field ">
+            <div class="ui input">
+              <select class="ui dropdown ai selection" style="width: 100%;" id="checkUserTitle" [(ngModel)]="riskAssRiskWsHdr.checkUserTitle">
+                <option value="00">เลือก</option>
+                <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+              </select>
+            </div>
+          </div>
+          <div class="two wide field ">
+            <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName"
+              [(ngModel)]="riskAssRiskWsHdr.checkUserName">
+          </div>
+          <div class="one wide field required">
+            <label class="text-right full-width">นามสกุล</label>
+          </div>
+          <div class="two wide field ">
+            <input type="text" placeholder="นามสกุล" class="custom" name="checkLastName" id="checkLastName" [(ngModel)]="riskAssRiskWsHdr.checkLastName">
+          </div>
+          <div class="one wide field required">
+            <label class="text-right full-width">ตำแหน่ง</label>
+          </div>
+          <div class="two wide field ">
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled
+              [(ngModel)]="riskAssRiskWsHdr.checkPosition">
           </div>
         </div>
         <div class="inline fields"></div>
@@ -58,19 +116,21 @@
               <label class="ui right ">ชื่อโครงการ</label>
             </div>
             <div class="ten wide field ">
-              <input type="text" placeholder="ชื่อโครงการ" maxlength="100" class="custom" name="projectBase" id="projectBase" [(ngModel)]="projectBase">
+              <input type="text" placeholder="ชื่อโครงการ" maxlength="100" class="custom" name="projectBase" id="projectBase"
+                [(ngModel)]="projectBase">
             </div>
           </div>
           <div class="inline fields">
             <div class="two wide field "></div>
             <div class="two wide field">
-              <label>ชื่อหน่วยงาน</label>
+              <label class="text-right full-width">ชื่อหน่วยงาน</label>
             </div>
             <div class="four wide field ">
-              <input type="text" placeholder="ชื่อหน่วยงาน" class="custom" name="departmentName" id="departmentName" [(ngModel)]="departmentName">
+              <input type="text" placeholder="ชื่อหน่วยงาน" class="custom" name="departmentName" id="departmentName"
+                [(ngModel)]="departmentName">
             </div>
             <div class="two wide field ">
-              <label>ค่าความเสี่ยง</label>
+              <label class="text-right full-width">ค่าความเสี่ยง</label>
             </div>
             <div class="four wide field ">
               <input type="text" placeholder="ค่าความเสี่ยง" class="custom" name="riskCost" id="riskCost" [(ngModel)]="riskCost">
@@ -87,7 +147,7 @@
           </div>
         </div>
 
-      <!-- insert form 1 -->
+        <!-- insert form 1 -->
         <div class="ui bottom attached tab segment" data-tab="second">
           <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
             <div class="ui attached segment">
@@ -129,10 +189,10 @@
               <th rowspan="2" style="text-align: center !important" class="two wide field ">หน่วยงาน</th>
               <th rowspan="2" style="text-align: center !important" class="two wide field ">ค่าความเสี่ยง</th>
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
-              <!-- <th rowspan="2" style="text-align: center !important">ลบ</th> -->
+              <th rowspan="2" style="text-align: center !important">ลบ</th>
             </tr>
             <tr>
-              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important"class="one wide field ">อัตราความเสี่ยง</th>
+              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important" class="one wide field ">อัตราความเสี่ยง</th>
               <th style="text-align: center !important" class="one wide field ">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
@@ -155,7 +215,7 @@
               ส่งออก
             </button>
             <button class="ui mini button" (click)="cancelFlow()">
-                <i class="close icon"></i>
+              <i class="close icon"></i>
               ยกเลิก
             </button>
           </div>
@@ -173,7 +233,7 @@
       <div class="ui form">
         <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-1-6'" (out)="closeConditionRL($event)"></condition>
       </div>
-      <br/>
+      <br />
     </div>
   </div>
 
