--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -292,14 +292,14 @@
                         รายงานผลการตรวจส่งออกสินค้า ณ ด่านส่งออกสินค้า</a>
                 </div>
             </div>
-            <!-- <div class="ui dropdown item ">
+            <div class="ui dropdown item ">
                 รายงานผลการตรวจส่งออก<i class="dropdown icon "></i>
                 <div class="menu">
                     <a class="item" [routerLink]="['/epa03/1']">ค้นหาข้อมูลการรายงานผลการตรวจส่งออก</a>
-                    <a class="item" [routerLink]="['/epa03/2']">ค้นหาข้อมูลใบขนสินค้าขาออก</a>
-                    <a class="item" [routerLink]="['/epa03/3']">รายงานสรุปผลการตรวจส่งออก</a>
+                    <!-- <a class="item" [routerLink]="['/epa03/2']">ค้นหาข้อมูลใบขนสินค้าขาออก</a>
+                    <a class="item" [routerLink]="['/epa03/3']">รายงานสรุปผลการตรวจส่งออก</a> -->
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     <!-- ///// END Menu Export Checking ///// -->
