--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/summary-report/summary-report.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/summary-report/summary-report.component.html
@@ -15,39 +15,16 @@
             <input value="{{analysNumber}}" readonly="" class="custom-readonly">
           </div>
         </div>
+        <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
+          <thead>
+            <th style="text-align: center !important">ภาคที่</th>
+            <th style="text-align: center !important">วันที่ส่ง</th>
+            <th style="text-align: center !important">วันที่ตอบกลับ</th>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
-    </div>
-
-    <div class="ui segment {{loading?'loading':''}}">
-
-      <form ngNativeValidate (submit)="onSend($event)">
-        <div class="ui grid">
-          <div class="sixteen wide column">
-            <div>
-              <table id="datatable" class="ui small celled table aligned hover striped selectable nowrap" style="width:100%;">
-                <thead>
-                  <th style="text-align: center !important">ภาคที่</th>
-                  <th style="text-align: center !important">วันที่ส่ง</th>
-                  <th style="text-align: center !important">วันที่ตอบกลับ</th>
-                <tbody>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button type="submit" class="ui mini primary button">
-              <i class="save icon"></i>
-              ส่งข้อมูลให้กลับให้ สมฐ.
-            </button>
-            <button type="button" class="ui mini button" (click)="appriveData()">
-              <i class="refresh icon"></i>
-              ล้างข้อมูล
-            </button>
-          </div>
-        </div>
-      </form>
     </div>
   </div>
 </div>
